<resources>
    <string name="app_name">mvp-firebase</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_way">Choose a way to get in</string>
    <string name="way_phone">Phone</string>
    <string name="way_email">Email</string>
    <string name="way_google_account">Google account</string>
    <string name="phone_number">phone number</string>
    <string name="code">code</string>
    <string name="send_code">send code</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="sign_in">sign in</string>
    <string name="btnTitleLogin">login</string>
    <string name="btnTitleSignUp">sign up</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="tv_registration">Registration</string>
    <string name="forgot_password">forgot password?</string>
    <string name="note_text">text</string>
    <string name="note_title">title</string>
    <string name="btnNavComp">go to nav component</string>
    <string name="title_activity_nav_comp">NavCompActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_dashboard">it\'s dashboard</string>
    <string name="tv_home">hoooome</string>
    <string name="tv_notifications">oh, notifications</string>
    <string name="next_screen">next screen</string>
    <string name="tv_second_home_screen">home second screen</string>
    <string name="tv_home_third_screen">it\'s home third screen</string>
    <string name="btn_back_to_mvp">back to mvp</string>
    <string name="btn_back">back</string>
</resources>
