<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ChooseWayFragment"
        android:gravity="center">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_way"
            android:textAlignment="center"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btnPhone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/way_phone"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/way_email"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/way_google_account"
            android:layout_marginTop="20dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:indeterminate="true"
            android:visibility="gone"/>
    </LinearLayout>
</layout>
