<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PhoneAuthFragment"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_phone"
            android:textSize="24sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="200dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>


<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/til_code"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/code">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/et_code"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="text" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnSendCode"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/send_code"-->
<!--            android:layout_marginTop="20dp"/>-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</layout>
